--- a/create/create.html
+++ b/create/create.html
@@ -69,7 +69,18 @@
           <input type="range" id="brushSize" min="1" max="16" value="1" />
         </div>
       </div>
-      <div class="swatches">        
+      <div class="recentSwatches">        
+      </div>
+      <div class="swatches">    
+        <div class="preset">          
+        </div>   
+        <div class="swatchSelect">
+          <select name="select swatch" id="selectSwatch">
+            <option value="default">default</option>
+            <option value="pastel">pastel</option>
+            <option value="custom">custom</option>
+          </select>
+        </div> 
       </div>
     </div>
     <div class="toolbar">
@@ -89,7 +100,6 @@
         <p>fill</p>
       </div>           
     </div>
-
     
   </body>
 </html>
